add functionality for updating preffered banking

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Terry Chitter",
   "license": "ISC",
   "dependencies": {
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.0"
   }
 }
